--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,64 @@
+body {
+    background-color: #f9f7fe;
+    font-family: sans-serif;
+}
+
+.container {
+    max-width: 600px;
+    margin: 60px auto;
+    background: white;
+    padding: 30px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 10px;
+}
+
+select {
+    display: block;
+    width: 100%;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.city {
+    display: flex;
+    margin: 20px 0;
+    justify-content: space-between;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+    padding: 20px 0;
+}
+.city:last-child {
+    border: none;
+}
+
+.time {
+    font-size: 48px;
+    font-weight: bolder;
+}
+.time small {
+    font-size: 18px;
+    vertical-align: middle;
+    line-height: 36px;
+}
+
 h1 {
     text-align: center;
+    font-family: sans-serif;
+    font-size: 38px;
 }
+h2 {
+    margin: 0 0 5px;
+    font-size: 28px;
+}
+
+.date {
+    opacity: 0.7;
+    vertical-align: middle;
+    line-height: 36px;
+}
+
 footer {
     text-align: center;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.8)
 }
